# Internet-Radio

./: .gitignore  CMakeLists.txt  gui_event_handler.c  gui_event_handler.h  main.c  player_event_handler.c  player_event_handler.h  stations.csv  stations.txt
gui/: gui_elements.h  gui_init.c  gui_init.h  widgets_init.c  widgets_init.h
link_parser/: exceptions_handler.c  exceptions_handler.h  get_stations.c  get_stations.h  parser_init.c  parser_init.h  station.h
player/: player_data.h  player_functions.c  player_functions.h  player_init.c  player_init.h
ports/: gui_port.c  gui_port.h  player_control.h
